# substrate

./: Cargo.toml  Dockerfile  chainSpec.json  customSpec.json  customSpecRaw.json  mw_reconciliation.rs
client/cli/src/: lib.rs
config/: chainSpec.json  customSpecRaw.json  docker-run.sh
frame/balances/src/: lib.rs
node/src/: chain_spec.rs
primitives/validate-input/: Cargo.toml
primitives/validate-input/proc-macro/: Cargo.toml
primitives/validate-input/proc-macro/src/: lib.rs
primitives/validate-input/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
